# odoo-extractor

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.sh
.github/workflows/: main.yml
app/: main.py
app/api/: app.py
app/engine/: cursor_store.py  extractor.py  models_registry.py
app/jobs/: full_extract_job.py  incremental_job.py
data/: models_list.csv
parquet_analysis/: analyze_parquets.py
src/: main.py  storage.py  utils.py
src/drivers/: delta_extract.py  full_extract.py
src/odoo_extractor/: connection.py  errors.py  odoo_client.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_odoo_client.py  test_utils_mixed_types.py
